--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,9 @@ services:
             - ./nginx/nginx.conf:/etc/nginx/nginx.conf
             - ./apps:/var/www/html
             - ./runtime/nginx:/var/www/log/nginx
+        depends_on: 
+            - php
+            - mysql
         expose:
             - 80
         ports: 
