--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
-version: "2.0"
+version: "2.1"
 services:
     php:
         image: registry.cn-hangzhou.aliyuncs.com/flydany/php73-fpm
+        # image: tphp
         container_name: locate.php
         restart: always
         volumes: 
