file upload size

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -26,6 +26,9 @@ http {
 
     keepalive_timeout  65;
 
+    # 文件上传最大限制
+    client_max_body_size 20m;
+
     #gzip  on;
 
     include /etc/nginx/conf.d/*;
