--- a/nginx/servers/default.conf
+++ b/nginx/servers/default.conf
@@ -1,35 +1,45 @@
 
 server {
     listen       80;
-    server_name   localhost;
-    root   /var/www/html/;
-    index  index.php index.html index.htm;
-
-    # charset utf8;
-    
-    access_log  /var/www/log/nginx/localhost.access.log  main;
-    error_log /var/www/log/nginx/localhost.error.log warn;
-
-    # error_page  404              /404.html;
-
+    server_name  localhost;
+ 
+    #charset koi8-r;
+    #access_log  /var/www/log/nginx/log/host.access.log  main;
+ 
+    location / {
+        root   /var/www/html/;
+        index  index.html index.htm;
+    }
+ 
+    #error_page  404              /404.html;
+ 
     # redirect server error pages to the static page /50x.html
     #
-    error_page   500 502 503 504  /50x.html;
-
-    # pass the PHP scripts to FastCGI server listening on docker container locate.php:9000
+    #error_page   500 502 503 504  /50x.html;
+    #location = /50x.html {
+    #    root   /var/www/html/;
+    #}
+ 
+    # proxy the PHP scripts to Apache listening on 127.0.0.1:80
     #
-    location ~ \.php$ {
-        fastcgi_pass    locate.php:9000;
-        fastcgi_index   index.php;
-        include         fastcgi_params;
-        fastcgi_param   SCRIPT_FILENAME  $document_root$fastcgi_script_name;
-        fastcgi_param   PATH_INFO $fastcgi_path_info;
-    }
-
+    #location ~ \.php$ {
+    #    proxy_pass   http://127.0.0.1;
+    #}
+ 
+    # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
+    #
+    #location ~ \.php$ {
+    #    root           html;
+    #    fastcgi_pass   127.0.0.1:9000;
+    #    fastcgi_index  index.php;
+    #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
+    #    include        fastcgi_params;
+    #}
+ 
     # deny access to .htaccess files, if Apache's document root
     # concurs with nginx's one
     #
-    location ~ /\.ht {
-        deny  all;
-    }
+    #location ~ /\.ht {
+    #    deny  all;
+    #}
 }
