--- a/php/7.35/Dockerfile
+++ b/php/7.35/Dockerfile
@@ -30,6 +30,7 @@ RUN apt-get update && apt-get install -y libwebp-dev libjpeg62-turbo-dev libpng-
     && docker-php-ext-configure gd --with-gd --with-webp-dir --with-jpeg-dir --with-png-dir --with-zlib-dir --with-xpm-dir --with-freetype-dir --enable-gd-native-ttf \
     && docker-php-ext-install -j$(nproc) gd \
     # 删除安装包？
+    && docker-php-source delete \
     && rm -rf /var/lib/apt/lists/*
 
 # 对其他容器开放9000端口
