--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -24,6 +24,9 @@ http {
     sendfile        on;
     #tcp_nopush     on;
 
+    # 软连接
+    disable_symlinks off;
+
     keepalive_timeout  65;
 
     # 文件上传最大限制
